# lorchestre

./: .gitignore  .prettierignore  .snitch.yaml  Cargo.toml  LICENSE  README.md  credits.fish  justfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.github/workflows/: pub.yaml
blueprint/gtk/: main.blp  main.css  main.ui  settings
conf/: Cargo.toml
conf/src/: default.toml  lib.rs
ctl/: Cargo.toml
ctl/launchd/: com.service.lorchestre.plist
ctl/src/: config.rs  lib.rs  m3u8.rs  main.rs  utils.rs
ctl/systemd/: lorchestre.service
daemon/: Cargo.toml
daemon/src/: config.rs  lib.rs  m3u8.rs  main.rs  state.rs  temp.rs  utils.rs
daemon/src/sql/: schema.sql
daemon/systemd/: mud.service
launchd/: com.service.lorchestre.plist
src/: CREDITS  app.html  app.qml  lib.rs  main.rs  search.rs  track.rs
src-tauri/: Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: args.rs  backend.rs  lib.rs  m3u8.rs  main.rs  player.rs
src-tauri/src/daemon/: config.rs  entry.rs  global.rs  list.rs  m3u8.rs  mod.rs  utils.rs
src-tauri/src/launchd/: dev.luxluth.lorchestre.plist
src-tauri/src/systemd/: lorchestre.service
src/di/: mod.rs  vectorized.rs
src/lib/: album.svelte.ts  commands.svelte.ts  config.svelte.ts  config.ts  ctx.svelte.ts  editviewController.svelte.ts  events.ts  filterq.svelte.ts  index.ts  listCreate.svelte.ts  lrc.svelte.ts  manager.svelte.ts  media.svelte.ts  nav.svelte.ts  page.svelte.ts  pageScroll.svelte.ts  playlist.svelte.ts  search.svelte.ts  toast.svelte.ts  type.ts  utils.ts
src/lib/components/: Commands.svelte  LinuxWindowControls.svelte  Lrc.svelte  LrcDisplay.svelte  LrycisChoiceEditView.svelte  Marquee.svelte  MiniPlayer.svelte  Navigation.svelte  Queue.svelte  SearchAlbum.svelte  SearchPlaylist.svelte  SearchTrack.svelte  ShallowSong.svelte  Slider.svelte  Song.svelte  Toast.svelte  WindowControls.svelte  WindowsWindowControls.svelte  marquee.svelte.ts
src/lib/i18n/: en.json  fr.json  index.ts  ja.json  langs.ts
src/lib/utils/: index.ts  transitions.ts  websocket.ts
src/platform/: mod.rs
src/platform/linux/: mod.rs  style.css
src/platform/linux/views/: albums_view.rs  mod.rs
src/platform/linux/views/album_object/: imp.rs  mod.rs
src/platform/linux/views/album_widget/: imp.rs  mod.rs  widget.ui
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  ContextMenu.svelte  EditView.svelte  FirstRun.svelte  Line.svelte  Player.svelte  StartingScreen.svelte  Toast.svelte  ToastDisplay.svelte  fonts.ts
src/routes/album/[id]/: +page.svelte  +page.ts
src/routes/create_list/: +page.svelte
src/routes/list/: +page.svelte
src/routes/list/[id]/: +page.svelte  +page.ts
src/routes/lrc/: +page.svelte
src/routes/open/[path_base]/: +page.svelte  +page.ts
src/routes/queue/: +page.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte  Blur.svelte  Credits.svelte  Lang.svelte  Refresh.svelte  Themes.svelte
src/routes/songs/: +page.svelte
src/routes/stats/: +page.svelte
src/styles/: global.css
src/ui/: mod.rs  start_view.rs
systemd/: lorchestre.service
