[package]
name = "lorchestre"
version = "0.1.0"
edition = "2024"

[dependencies]
alrc = "0.1.0"
bincode = "2.0.1"
dirs = "6.0.0"
glob = "0.3.2"
lofty = "0.22.4"
md5 = "0.8.0"
mime_guess = "2.0.5"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
tokio = { version = "1.46.1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_18"] }

