[package]
name = "lorchestre"
version = "0.1.0"
edition = "2024"

[dependencies]
alrc = "0.1.0"
bincode = "2.0.1"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
glob = "0.3.2"
lofty = "0.22.4"
md5 = "0.8.0"
mime_guess = "2.0.5"
rodio = { version = "0.21.1", features = ["symphonia-all"] }
rust-i18n = "3.1.5"
# once_cell = "1.21.3"
tokio = { version = "1.46.1", features = ["full"] }
vello = "0.5.0"
winit = "0.30.11"

[target.'cfg(target_os = "linux")'.dependencies]

