[package]
name = "lorchestrectl"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
axum-extra = "0.9.3"
axum-range = "0.4.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
color-thief = "0.2.2"
dirs = "5.0.1"
glob = "0.3.1"
image = "0.25.1"
lofty = "0.20.0"
lrc = "0.1.8"
md5 = "0.7.0"
mime_guess = "2.0.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
socketioxide = { version = "0.13.1", features = ["state"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
lorconf = { path = "../conf" }
