[package]
name = "lorchestre"
version = "0.2.0"
description = "The only music player you'll ever need"
authors = ["luxluth"]
edition = "2021"
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri-plugin-shell = "2.2.0"
tauri-plugin-window-state = "2.2.0"
tauri-plugin-single-instance = "2.2.0"
tauri = { version = "2.1.1", features = [
  "macos-private-api",
] }
lorconf = { path = "../conf" }
reqwest = "0.12.9"
axum = { version = "0.7.9", features = ["json"] }
axum-extra = { version = "0.9.6", features = ["query"] }
axum-range = "0.4.0"
color-thief = "0.2.2"
dirs = "5.0.1"
glob = "0.3.1"
image = "0.25.5"
lofty = "0.21.1"
md5 = "0.7.0"
mime_guess = "2.0.5"
socketioxide = { version = "0.15.1", features = ["state"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
alrc = { version = "0.1.0", features = ["serde"] }
tauri-plugin-decorum = "1.1.1"
tantivy = "0.22.0"
tauri-plugin-dialog = "2.2.0"
bitcode = "0.6.3"
tauri-plugin-process = "2.2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"


