[package]
name = "lorchestre"
version = "0.2.4"
description = "The only music player you'll ever need"
authors = ["luxluth"]
edition = "2021"
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-shell = "2.2.1"
tauri-plugin-window-state = "2.2.2"
tauri-plugin-single-instance = "2.2.4"
tauri = { version = "2.5.1", features = [
  "macos-private-api",
] }
lorconf = { path = "../conf" }
reqwest = { version = "0.12.19", features = ["blocking", "json"] }
axum = { version = "0.8.4", features = ["json", "ws"] }
axum-extra = { version = "0.10.1", features = ["query", "typed-header"] }
axum-range = "0.5.0"
color-thief = "0.2.2"
dirs = "6.0.0"
glob = "0.3.2"
image = "0.25.6"
lofty = "0.22.4"
md5 = "0.7.0"
mime_guess = "2.0.5"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.5", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
alrc = { version = "0.1.0", features = ["serde"] }
tauri-plugin-decorum = "1.1.1"
tantivy = "0.24.1"
tauri-plugin-dialog = "2.2.1"
bitcode = "0.6.6"
tauri-plugin-process = "2.2.1"
futures = "0.3.31"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"


